gst added ui upgrated

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
 	</div>
 	<div class="show-container">
 		<div class="col-sm-8 col-sm-offset-2 product-name-flash">
-			<h2>{{item.itemname}}</h2>
+			<h2 style="color:#ffffff">{{item.itemname}}</h2>
 		</div>
 		<div class="col-sm-8 col-sm-offset-2 price-name-flash">
 			<h1>₹ {{item.price}}</h1>
