--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@
   outline: none !important;
 }
 body {
+  background:#703af6;
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
@@ -25,6 +26,9 @@ box-shadow: 0 0 10px rgba(0,0,0,0.6);
   box-shadow:0 3px 10px 0 rgba(115,143,147,.3);
 }
 .form-container{
+  border-top:15px solid rgb(87, 1, 142);
+  border-bottom:15px solid rgb(87, 1, 142);
+  background:#ffffff !important;
   margin-top:10px;
   padding:20px;
 }
@@ -39,9 +43,9 @@ box-shadow: 0 0 10px rgba(0,0,0,0.6);
   height: 80px;
   border-radius:10px;
   font-family:'Orbitron', sans-serif;
-  border: 2px solid #7B7C7C;
+  border: 2px solid #000000;
   overflow: scroll;
-  background : #C9D7C7;
+  background : #7AD300;
 }
 .popupboxbody{
   margin:0;
@@ -70,6 +74,10 @@ table{
   margin-top: 20px;
   border-radius:20px;
 }
+thead tr{
+  color:#ffffff;
+  background:rgb(237, 5, 148) !important;
+}
 th, td {
 	  margin-top: 20px;
 }
@@ -90,21 +98,24 @@ th, td {
 select > .placeholder {
   display: none;
 }
+tr:nth-child(odd) {background-color: #ffffff;}
 tr:nth-child(even) {background-color: #e9e9e9;}
 .custom-input{
+  border:4px solid #671FCD !important;
   border:1px solid rgb(182, 182, 182);
   padding:6px;
   border-radius:4px;
   font-size:15px;
 }
 .refresh-btn{
+  border:2px solid #ffffff;
   color:#fff;
   margin-top:10px;
   border-radius:20px;
   background:rgb(103, 31, 205) !important;
 }
 .print-btn{
-  border:0;
+  border:2px solid #ffffff;
   color:#fff;
   margin-top:10px;
   border-radius:20px;
